--- a/beautyChuSpring/src/main/webapp/view/kh-womanColor.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-womanColor.html
@@ -4,78 +4,85 @@
 <meta charset="UTF-8">
 <title>Beauty Chu~♥</title>
 
+
+<!-- 쿠폰 알림 css -->
+<link rel="stylesheet" type="text/css"
+	href="../css/resources/coupon/default.css" />
+<link rel="stylesheet" type="text/css"
+	href="../css/resources/coupon/component.css" />
+<script src="../js/resources/coupon/modernizr.custom.js"></script>
+
+
+<!-- 라디오버튼  -->
+
+<link rel="stylesheet" href="../css/resources/radiobutton.css" />
+<!-- 마페 -->
+
 <link rel="shortcut icon" href="../images/favicon.ico"
 	type="image/x-icon">
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
+
+<link rel="stylesheet" type="text/css" href="../css/basic.css" />
+
+<script type="text/javascript" src="../js/modernizr.min.js"></script>
+<script type="text/javascript" src="../js/jquery.easing.js"></script>
+<script type="text/javascript" src="../js/jquery-scrolltofixed-min.js"></script>
+<script type="text/javascript" src='../js/handlebars-v2.0.0.js'></script>
+
+<!-- 마페 -->
 <link rel="stylesheet" href="../css/resources/starrr.css">
 <link rel="stylesheet"
 	href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="../css/yun/button.min.css">
 <!-- 스타일 -->
+<!-- 댓글 -->
 <link rel="stylesheet" href="../css/jy/jy_DG_Slider.css" type="text/css"
 	media="all" />
-	
-<!-- 썸네일 이미지 -->	
 
-	<link rel="stylesheet" type="text/css" href="../css/thumnail.css" />
-	<link rel="stylesheet" type="text/css" href="../css/shop.css" />
+<!-- 지도 -->
+<script type="text/javascript"
+	src="//apis.daum.net/maps/maps3.js?apikey=e5353ee43c5a9ea624372eb7cb8e99b1646087a2&libraries=services"></script>
 
- <!-- 공통 스크립트 -->
-<!-- <script type="text/javascript" src="../js/modernizr.min.js"></script> -->
-<script  src="http://code.jquery.com/jquery-latest.min.js"></script>
-<!-- <script type="text/javascript" src="../js/jquery.easing.js"></script> -->
-<!-- <script type="text/javascript" src="../js/jquery-scrolltofixed-min.js"></script> -->
+
+<!-- 썸네일 이미지 -->
+<!-- 헤더랑 충돌중	<link rel="stylesheet" type="text/css" href="../css/thumnail.css" /> -->
+<link rel="stylesheet" type="text/css" href="../css/shop.css" />
+
+<!-- 공통 스크립트 -->
+<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script type="text/javascript" src="../js/common.js"></script>
-<!-- <script type="text/javascript" src="../js/motion.js"></script>  -->
-<!-- <script type="text/javascript" src="../js/jquery.motio.min.js"></script>  -->
 
 
-	<script>
+<script>
 			window.intro = 'yes';
 	</script>
-		
+
 <!-- 	page가 home일 경우에만 로드하는 js -->
-<!--  	<script type="text/javascript" src="../js/jquery.touchSwipe.min.js"></script> -->
-<!-- 	<script type="text/javascript" src="../js/jquery.event.drag-2.2.js"></script> -->
-<!-- 	<script type="text/javascript" src="../js/jquery.event.drag.live-2.2.js"></script> -->
-<!-- 	<script type="text/javascript" src="../js/home.js"></script> -->
-<!-- 	<script type="text/javascript" src="../js/home.show-window.js"></script> -->
 <!-- 공통 스크립트 -->
 
 
-<script type="text/javascript" src='../js/handlebars-v2.0.0.js'></script>
-
-
-
-<!--     <script type="text/javascript" src="../js/resources/jquery-1.9.1.min.js"></script> -->
-    <script type="text/javascript" src="../js/resources/kh/jssor.js"></script> 
-    <script type="text/javascript" src="../js/resources/kh/jssor.slider.js"></script> 
+<script type="text/javascript" src="../js/resources/kh/jssor.js"></script>
+<script type="text/javascript" src="../js/resources/kh/jssor.slider.js"></script>
 
 
 <!-- 썸네일이미지 -->
-	<script type="text/javascript" src="../js/shop.js"></script>
+<script type="text/javascript" src="../js/shop.js"></script>
 
 <style type="text/css">
-
-
-
-
 
 /* 스타일 적용 공간! */
 
 /* ============================================================== */
 
-
-
 /*  댓글 스타일 */
-.comment{
-height: 50px;
+.comment {
+	height: 50px;
 }
 
 .kh-reviewbtn {
 	display: none;
-
 }
+
 .btn {
 	display: block;
 	float: right;
@@ -83,12 +90,10 @@ height: 50px;
 
 .none {
 	display: none;
-
 }
 
 .reviewUpdateForm {
-
-	 float: left; 
+	float: left;
 }
 
 .review-btn {
@@ -99,20 +104,17 @@ height: 50px;
 	display: none;
 }
 
-
-
 /* ========================== */
 .wrap-chu {
 	width: 1200px;
 	height: 100%;
 	margin: 0 auto;
-	margin-top: 100px; 
+	margin-top: 30px;
 }
 
 html {
 	height: 100%;
 }
-
 
 header {
 	height: 100px;
@@ -156,23 +158,27 @@ body {
 .yun-box {
 	position: relative;
 	width: 280px;
-	height: 410px;
- 	float: left; 
+	height: 427px;
+	float: left;
 	margin: 5px;
 	font-size: 40px;
-	border-radius: 10px;
 	overflow: hidden;
+	border: 1px #c5c5c5 solid;
+	margin-bottom: 25px;
+	margin-top: 20px;
 }
 
 .yun-edge {
+	
 }
 
 .yun-selected {
+	
 }
 
 .yun-boximage {
 	width: 280px;
-	height: 410px;
+	height: 370px;
 }
 
 .kh-basic {
@@ -180,14 +186,14 @@ body {
 	bottom: 0px;
 	width: 280px;
 	text-align: center;
-	height: 100px;
-	background-color: rgba(0,0,0,1);
-	color: white;
-	border-radius: 0px 0px 10px 10px;
+	height: 57px;
+	color: black;
 	font-size: 30px;
+	border-top: 1px #c5c5c5 solid;
 }
+
 .kh-basic h2 {
-	color: white;
+	color: black;
 	margin-top: 15px;
 }
 
@@ -208,9 +214,8 @@ body {
 }
 
 .kh-basic .starrr {
-   	margin-top: 10px;
+	margin-top: 10px;
 }
-
 
 .kh-detail {
 	position: absolute;
@@ -218,9 +223,7 @@ body {
 	width: 280px;
 	text-align: center;
 	height: 140px;
-	background-color: rgba(0,0,0,1);
 	color: white;
-	border-radius: 0px 0px 10px 10px;
 	display: none;
 }
 
@@ -228,16 +231,14 @@ body {
 	position: absolute;
 	top: 0px;
 	width: 280px;
-	height: 270px;
-	background-color: rgba(0,0,0,0.5);
+	height: 370px;
+	background-color: rgba(0, 0, 0, 0.5);
 	display: none;
-	border-radius: 10px 10px 0px 0px;
 }
 
 .yun-shop-button .yun-shoppricelist {
 	float: left;
 }
-
 
 /* ============================================================== */
 /* yun-test.html css */
@@ -263,8 +264,10 @@ body {
 /* yun-shoppricelist.html css */
 #yun-shopdetailcontainer {
 	width: 1150px;
-	height: 600px;
+	height: 590px;
 	background-color: white;
+	border-top: 1px #c5c5c5 solid;
+	border-bottom: 1px #c5c5c5 solid;
 }
 
 #yun-shopstylelist {
@@ -290,7 +293,6 @@ body {
 	float: left;
 	margin: 4px;
 	text-align: center;
-	
 }
 
 .kh-priceicon img {
@@ -317,7 +319,9 @@ body {
 	bottom: 0px;
 	text-align: center;
 	width: 155px;
-	background-color: rgba(0,0,0,0.5);
+	height: 22px;
+	background-color: rgba(0, 0, 0, 0.5);
+	padding-top: 7px;
 	border-radius: 0 0 5px 5px;
 	color: white;
 }
@@ -328,14 +332,13 @@ body {
 	text-align: center;
 	width: 155px;
 	height: 178px;
-	background-color: rgba(0,0,0,0.5);
+	background-color: rgba(0, 0, 0, 0.5);
 	border-radius: 5px;
 	color: white;
 }
 
 .kh-smalldetailinfo {
 	margin-top: 75px;
-	
 }
 
 #yun-buttondiv {
@@ -355,6 +358,7 @@ body {
 }
 
 .yun-shoppricelist {
+	
 }
 /* ============================================================== */
 /* yun-styledetail.html css */
@@ -404,15 +408,16 @@ body {
 .yun-stylecomment {
 	width: 100%;
 	margin-top: 52px;
-	
 }
 
 /* ============================================================== */
 /* yun-shopdetail.html css */
 #yun-shopdetailcontainer {
 	width: 1150px;
-	height: 600px;
+	height: 598px;
 	background-color: white;
+	border-top: 1px #c5c5c5 solid;
+	border-bottom: 1px #c5c5c5 solid;
 }
 
 .yun-shopcontainerdiv {
@@ -446,6 +451,7 @@ body {
 	height: 50px;
 	font-size: 30px;
 }
+
 .yun-pricetitle {
 	float: left;
 	font-size: 30px;
@@ -458,53 +464,64 @@ body {
 
 .yun-shopcomment {
 	width: 100%;
-	margin-top: 10px;
+	margin-top: 60px;
 }
 
 .row {
 	height: 100%;
 	boredr: 1px green solid;
-	
 }
-
 
 /* ============================================================== */
 /* ==============================버튼 스타일================================ */
-
 .buttondiv {
 	text-align: center;
 }
 
 .ui.basic.button, .ui.basic.buttons .button {
-
-border-radius: 20px;
+	border-radius: 3px;
 }
-
-
 </style>
 
 </head>
 <body class="home">
+	<div style="background-color: white;">
 
-	<jy_header>
-		<!-- header 건들지 말긔! -->
-	</jy_header>
+		<header>
+			<!-- header 건들지 말긔! -->
+		</header>
 
 
-	<!--	<div id=changediv >
+		<!--	<div id=changediv >
 			<div id=div1>1 <button class='yun-pricelist' type="button">price list</button>
 			</div>
 
 		</div> -->
-	<div id="wrap-chu" class="wrap-chu">
+		<div id="wrap-chu" class="wrap-chu">
+			<div style="text-align: center;">
+				<DIV
+					style="font-size: 50px; height: 50px; padding: 20px; margin-top: 20px; margin-bottom: 40px;">WOMAN &nbsp; COLOR</DIV>
+				<table style="margin: auto;">
+					<tr>
+						<td><input type="radio" name="radiog_dark" id="radio1"
+							class="css-checkbox" checked="checked" /> <label for="radio1"
+							class="css-label" data-sort="All">ALL</label></td>
+						<td><input type="radio" name="radiog_dark" id="radio2"
+							class="css-checkbox" /> <label for="radio2" class="css-label"
+							data-sort="SHORT">SHORT</label></td>
+						<td><input type="radio" name="radiog_dark" id="radio3"
+							class="css-checkbox" /> <label for="radio3" class="css-label"
+							data-sort="Medium">MEDIUM</label></td>
+						<td><input type="radio" name="radiog_dark" id="radio4"
+							class="css-checkbox" /> <label for="radio4" class="css-label"
+							data-sort="Long">LONG</label></td>
+					</tr>
+				</table>
+			</div>
+			<div class="yun-container"
+				style="border-top: 2px black solid; margin-top: 10px; padding-left: 30px;"></div>
 
-<INPUT TYPE="radio" class="kh-radio" NAME="Gubun" value="All"  checked="checked">ALL
-<INPUT TYPE="radio" class="kh-radio" NAME="Gubun" value="Short">SHORT
-<INPUT TYPE="radio" class="kh-radio" NAME="Gubun" value="Medium">MEDIUM
-<INPUT TYPE="radio" class="kh-radio" NAME="Gubun" value="Long">LONG
-<div class="yun-container"></div>	
-
-<!--  			<div class="yun-box">
+			<!--  			<div class="yun-box">
 				<img class="yun-boximage" src="../images/main/woman (1).png">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
@@ -518,19 +535,19 @@ border-radius: 20px;
 					<div class="kh-gradation"></div>
 			</div>  -->
 
-	</div>
+		</div>
 
-	<footer>
-		<!-- footer 건들지 말긔! -->
-	</footer>
+		<footer>
+			<!-- footer 건들지 말긔! -->
+		</footer>
 
-<!-- 	<script type="text/javascript"
+		<!-- 	<script type="text/javascript"
 		src='../js/resources/jquery-2.1.1.min.js'></script>
 	<script src="../js/resources/starrr.js"></script> -->
 
-	<script type="text/javascript">
+		<script type="text/javascript">
 	<!-- header, footer 로드 스크립트!! -->
-		$('jy_header').load('common/jy_header.html'); 
+		$('header').load('common/header.html'); 
 		$('footer').load('common/footer.html');
 
 		
@@ -682,8 +699,13 @@ border-radius: 20px;
 		 $('div').on("click", '.reviewDelete-btn', function(){
 			 event.stopPropagation();
 			 if (confirm('댓글을 삭제하시겠습니까?')) {
-				 deleteReview($(this).attr('data-reviewNo'));
-				  refreshReview($("#kh-reviewAdd").attr('data-no'));
+					  deleteReview($(this).attr('data-reviewNo'));
+						  refreshReview($("#kh-reviewAdd").attr('data-no'));
+
+				  
+				 /*  $.get(deleteReview($(this).attr('data-reviewNo'))).done(function() {
+					  refreshReview($("#kh-reviewAdd").attr('data-no'));
+					}); */
 				} else {
 				    // Do nothing!
 				}
@@ -728,7 +750,8 @@ border-radius: 20px;
 			
 			
 			loadShop($(this).attr('data-email')); 
- 			
+			loadShopReview($(this).attr('data-email'));
+			
 			pagebtnnum++;
 		});
 		
@@ -772,7 +795,10 @@ border-radius: 20px;
 			});
 		}); */
 		
-		$('div').on("click",".yun-shopstyle",function() {
+		
+		
+		/* 가격표에서 스타일 클릭 */
+/* 		$('div').on("click",".yun-shopstyle",function() {
 			event.stopPropagation();
 			$('<div>').fadeIn('fast').appendTo("#changediv").attr({"id":"yun-div"+pagebtnnum,"class":"yun-div"})
 			.css({"z-index":pagebtnnum,"margin-left":"100%"}).animate({ marginLeft: "0px" }, 500);
@@ -781,7 +807,7 @@ border-radius: 20px;
 			
 			pagebtnnum++;
 
-		});
+		}); */
 		
 		
 
@@ -790,8 +816,7 @@ border-radius: 20px;
 	$(document).on('mouseenter', '.yun-box',  function(){
 			
 			
-			  $(this).find(".kh-basic").css("display", "none");
-			  $(this).find(".kh-detail").css("display", "block");
+			  /* $(this).find(".kh-detail").css("display", "block"); */
 			  $(this).find(".kh-gradation").css("display", "block");
 			  
 		}).on('mouseleave', '.yun-box', function() {
@@ -810,15 +835,17 @@ border-radius: 20px;
 			alert("쿠폰이 발급되었습니다!");
 		});
 		
-		$('div').on("click",".kh-shopmap",function(){
-			event.stopPropagation();
-			/* $('#yun-shopphotolist').load('../images/shop/shopmap1.png'); */
-			});
+			/* 샵 지도 클릭 */
+			$(document).on('click', '.kh-shopmap',  function(){
+				console.log("ssssssssssssssss");
+		 		loadMap($(this).attr('data-email'));
+		 		});
+		
 
 		
 		
 		/* 스타일 리스트 로드 */		
-		$.getJSON('../json/style/list.do?gender=Female&styleLength=All&styleSort=Color', 
+		$.getJSON('../json/style/list.do?people=normal&styleSort=Color&gender=woman&styleLength=All&styleSort=All', 
 			    function(data){
 								console.log(data);						
 
@@ -829,7 +856,7 @@ border-radius: 20px;
 						    	});  
 					    });
 
-		/* $.getJSON('../json/auth/loginUser.do', 
+/* 		$.getJSON('../json/auth/loginUser.do', 
 					    function(data){
 								console.log(data);						
 
@@ -899,10 +926,14 @@ border-radius: 20px;
 				}); 
 				
  				
- 				$(document).on('click', '.kh-radio',  function(){
- 					styleLength($(this).val());
+ 				/* 라디오 버튼 클릭 */
+ 				
+ 				$(document).on('click', '.css-label',  function(){
+ 					console.log($(this).attr("data-sort"));
+ 					styleLength($(this).attr("data-sort"));
  				});
-				
+ 				
+
 				
 				
 				
@@ -943,10 +974,35 @@ border-radius: 20px;
  						    	  var html = template(data);
  					    		  $('#yun-div'+pagebtnnum+' '+'#yun-shopphotolist').html(html);	  
  						      }); 
+ 			 			      $.get('templates/jy_commenttemp.html', function(source){
+ 			 			    	  var template = Handlebars.compile(source);
+ 			 			    	  var html = template(data);
+ 			 			    	  $('#yun-shopcomment').html(html);
+ 			 			    	console.log(yyyyMMdd(data.review0.date));
+ 			 			    	$('.kh-reviewDate').val(yyyyMMdd(data.review0.date));
+ 			 			      });
+ 	 					     
  						    });
  				 	} 
 				
- 				
+				/* 댓글 날짜 */
+ 				function yyyyMMdd(date) {
+ 					  if (date) {
+ 					    var date = new Date(date);
+ 					    var str = date.getFullYear() + '-';
+ 					    
+ 					    if (date.getMonth() < 9) str += '0';
+ 					    str += (date.getMonth() + 1) + '-';
+ 					    
+ 					    if (date.getDate() < 10) str += '0';
+ 					    str += date.getDate();
+ 					    
+ 					    return str;
+ 					    
+ 					  } else {
+ 					    return '';
+ 					  }
+ 					}
  				/* 스타일 디테일 로드 */
  				function loadStyleDetail(styleNo) {
 					$.getJSON('../json/style/detail.do?styleNo='+styleNo, 
@@ -970,25 +1026,61 @@ border-radius: 20px;
 						    	  var template = Handlebars.compile(source);
 						    	  var html = template(data);
 						    	  $('#yun-stylecomment').html(html);
+						    	  for(var i = 0; i< data.review.length; i++){
+						    		  console.log(yyyyMMdd(data.review[i].date));  
+	 			 			    	$('.kh-reviewDate'+data.review[i].date).html(yyyyMMdd(data.review[i].date));
+						    	  }
+	 			 			    	
+	 			 			    	
 						      });
 						    });
 				 	}
  				
  				/* 기장 분류 */
  				function styleLength(styleLength) {
- 					$.getJSON('../json/style/list.do?styleSort=Color&gender=Female&styleLength='+styleLength, 
+ 					$.getJSON('../json/style/list.do?people=normal&styleSort=Color&gender=woman&styleLength='+styleLength, 
  						    function(data){
  											console.log(data);						
  								      $.get('templates/style-table.html', function(source){
  									    	  var template = Handlebars.compile(source);
  									    	  var html = template(data);
- 									    	  /* console.log(html); */
+ 									    	  console.log(html);
  									    	  $('.yun-container').html(html);
  									    	});  
  								    });
 				 	}
+ 				
+ 				
+ 				/* 샵 댓글 로드 */
+ 				
+ 				function loadShopReview(email) {
+		 		$.getJSON('../json/review/reviewList.do?shopEmail='+email, 
+		 			    function(data){
+		 			console.log(data);
+		 			      $.get('templates/jy_commenttemp.html', function(source){
+		 			    	  var template = Handlebars.compile(source);
+		 			    	  var html = template(data);
+		 			    	  $('#yun-shopcomment').html(html);
+		 			      });
+		 			    });
+		 	 	}
+ 				
+ 				
+				/* 지도보기 */
+		function loadMap(email) {
+ 		$.getJSON('../json/shop/view.do?mail='+email,
+			    function(data){
+			console.log(data);
+			      $.get('templates/yun-maptemp.html', function(source){
+			    	  var template = Handlebars.compile(source);
+			    	  var html = template(data);
+			    	  console.log(html);
+			    	  $('#yun-div'+pagebtnnum+' #yun-shopphotolist').html(html);
+			      });
+			    });
+	 	}
 	</script>
-
+	</div>
 </body>
 </html>
 
