헤더 링크수정

--- a/beautyChuSpring/src/main/webapp/view/common/header.html
+++ b/beautyChuSpring/src/main/webapp/view/common/header.html
@@ -43,11 +43,11 @@
 						class="over"></span><span class="label">Man</span></a>
 					<div class="sub-menu">
 						<ul>
-							<li class="m2"><a href="#">Man Cut</a></li>
-							<li class="m3"><a href="#">Man Perm</a></li>
-							<li class="m4"><a href="#,">Man Color</a></li>
-							<li class="m5"><a href="#">Man Care</a></li>
-							<li class="m6"><a href="#">Man ETC</a></li>
+							<li class="m2"><a href="kh-manCut.html">Man Cut</a></li>
+							<li class="m3"><a href="kh-manPerm.html">Man Perm</a></li>
+							<li class="m4"><a href="kh-manColor.html">Man Color</a></li>
+							<li class="m5"><a href="kh-manCare.html">Man Care</a></li>
+							<li class="m6"><a href="kh-manEtc.html">Man ETC</a></li>
 						</ul>
 
 					</div> <!-- Fashion &amp; Style Content -->
@@ -61,11 +61,11 @@
 						class="over"></span><span class="label">woman</span></a>
 					<div class="sub-menu">
 						<ul>
-							<li class="m1"><a href="#">Woman Cut</a></li>
-							<li class="m2"><a href="#">Woman Perm</a></li>
-							<li class="m3_02"><a href="#">Woman Color</a></li>
-							<li class="m3"><a href="#">Woman Care</a></li>
-							<li class="m4"><a href="#">Woman ETC</a></li>
+							<li class="m1"><a href="kh-womanCut.html">Woman Cut</a></li>
+							<li class="m2"><a href="kh-womanPerm.html">Woman Perm</a></li>
+							<li class="m3_02"><a href="kh-womanColor.html">Woman Color</a></li>
+							<li class="m3"><a href="kh-womanCare.html">Woman Care</a></li>
+							<li class="m4"><a href="kh-womanEtc.html">Woman ETC</a></li>
 						</ul>
 					</div></li>
 				<!-- end of li.m3 -->
