--- a/beautyChuSpring/src/main/webapp/view/kh-manCut.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-manCut.html
@@ -842,7 +842,7 @@ body {
 		
 		
 		/* 스타일 리스트 로드 */		
-		$.getJSON('../json/style/list.do?styleSort=Cut&gender=man&styleLength=All&styleSort=All', 
+		$.getJSON('../json/style/list.do?styleSort=Cut&gender=man&styleLength=All', 
 			    function(data){
 								console.log(data);						
 
