--- a/beautyChuSpring/src/main/webapp/view/kh-womanEtc.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-womanEtc.html
@@ -845,7 +845,7 @@ body {
 		
 		
 		/* 스타일 리스트 로드 */		
-		$.getJSON('../json/style/list.do?people=normal&styleSort=Etc&gender=woman&styleLength=All&styleSort=All', 
+		$.getJSON('../json/style/list.do?people=normal&styleSort=Etc&gender=woman&styleLength=All', 
 			    function(data){
 								console.log(data);						
 
