--- a/beautyChuSpring/src/main/webapp/view/yun-womanstylethumbnail.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-womanstylethumbnail.html
@@ -158,7 +158,7 @@ body {
 .yun-box {
 	position: relative;
 	width: 280px;
-	height: 427px;
+	height: 438px;
 	float: left;
 	margin: 5px;
 	font-size: 40px;
@@ -177,8 +177,8 @@ body {
 }
 
 .yun-boximage {
-	width: 280px;
-	height: 370px;
+	width: 100%;
+	height: auto;
 }
 
 .kh-basic {
@@ -186,7 +186,7 @@ body {
 	bottom: 0px;
 	width: 280px;
 	text-align: center;
-	height: 57px;
+	height: 89px;
 	color: black;
 	font-size: 30px;
 	border-top: 1px #c5c5c5 solid;
@@ -231,7 +231,7 @@ body {
 	position: absolute;
 	top: 0px;
 	width: 280px;
-	height: 370px;
+	height: 349px;
 	background-color: rgba(0, 0, 0, 0.5);
 	display: none;
 }
