--- a/beautyChuSpring/src/main/webapp/view/kh-manColor.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-manColor.html
@@ -842,7 +842,7 @@ body {
 		
 		
 		/* 스타일 리스트 로드 */		
-		$.getJSON('../json/style/list.do?styleSort=Color&gender=man&styleLength=All&styleSort=All', 
+		$.getJSON('../json/style/list.do?styleSort=Color&gender=man&styleLength=All', 
 			    function(data){
 								console.log(data);						
 
