--- a/beautyChuSpring/src/main/webapp/view/common/header.html
+++ b/beautyChuSpring/src/main/webapp/view/common/header.html
@@ -434,10 +434,10 @@ $.ajax({
 				$('#jy-pw-check').html("비밀번호를 입력해주세요.");
 				passwordpass = 0;
 			} else if (password1 === password2) {
-				$('#jy-pw-check').html("패스워드가 일치 합니다.^^").css("color","blue");
+				$('#jy-pw-check').html("패스워드가 일치 합니다.").css("color","blue");
 				passwordpass = 1;
 			} else {
-				$('#jy-pw-check').html("패스워드가 일치하지 않습니다..").css("color","red");
+				$('#jy-pw-check').html("패스워드가 일치하지 않습니다.").css("color","red");
 				passwordpass = 0;
 			}
 		}
