--- a/beautyChuSpring/src/main/webapp/view/jy_qna.html
+++ b/beautyChuSpring/src/main/webapp/view/jy_qna.html
@@ -5,13 +5,31 @@
 
 <meta charset="UTF-8">
 
-<link rel="shortcut icon" href="../images/favicon.ico"
-	type="image/x-icon">
+<link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
 
-<script type='text/javascript'
-	src='http://code.jquery.com/jquery-1.7.2.js'></script>
+<link rel="stylesheet" type="text/css" href="../css/basic.css"/>
+
+<script type="text/javascript" src="../js/modernizr.min.js"></script>
 <script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="../js/jquery.easing.js"></script>
+<script type="text/javascript" src="../js/jquery-scrolltofixed-min.js"></script>
+<script type="text/javascript" src="../js/common.js"></script>
+<script type="text/javascript" src='../js/handlebars-v2.0.0.js'></script>
+
+	<!-- 이거 추가해야함!!!!!! -->
+    <!-- js placed at the end of the document so the pages load faster -->
+    <script src="../js/jquery.js"></script>
+    <script src="../js/jquery.form.js"></script>
+    <script class="include" type="text/javascript" src="assets/js/jquery.dcjqaccordion.2.7.js"></script>
+    <script src="../js/jquery.scrollTo.min.js"></script>
+    <script src="../js/jquery.nicescroll.js" type="text/javascript"></script> 
+
+	<!-- jQuery MultiFile Plugin import -->
+	<script src="../js/jquery.MultiFile.js"></script>
+
+    <!--common script for all pages-->
+    <!-- <script src="../js/common-scripts.js"></script> -->
 
 <style type="text/css">
 /* 스타일 적용 공간! */
