--- a/beautyChuSpring/src/main/webapp/view/yun-womanstylethumbnail.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-womanstylethumbnail.html
@@ -193,8 +193,9 @@ body {
 }
 
 .kh-basic h2 {
-	color: black;
+	color: #999;
 	margin-top: 15px;
+	font-family: MyriadPro-Semibold, Helvetica, sans-serif;
 }
 
 .kh-detail h2 {
@@ -500,8 +501,8 @@ body {
 		<div id="wrap-chu" class="wrap-chu">
 			<div style="text-align: center;">
 				<DIV
-					style="font-size: 50px; height: 50px; padding: 20px; margin-top: 20px; margin-bottom: 40px;">WOMAN &nbsp; STYLE</DIV>
-				<table style="margin: auto;">
+					style="font-family: MyriadPro-Semibold, Helvetica, sans-serif;font-size: 50px; height: 50px; padding: 20px; margin-top: 20px; margin-bottom: 40px;">WOMAN &nbsp; STYLE</DIV>
+				<table style="margin: auto;font-family: MyriadPro-Semibold, Helvetica, sans-serif;">
 					<tr>
 						<td><input type="radio" name="radiog_dark" id="radio1"
 							class="css-checkbox" checked="checked" /> <label for="radio1"
@@ -1062,6 +1063,7 @@ body {
 		 			    	  var html = template(data);
 		 			    	  $('#yun-shopcomment').html(html);
 		 			      });
+		 			      
 		 			    });
 		 	 	}
  				
