--- a/beautyChuSpring/src/main/webapp/view/jy_qna.html
+++ b/beautyChuSpring/src/main/webapp/view/jy_qna.html
@@ -34,7 +34,7 @@
 <style type="text/css">
 /* 스타일 적용 공간! */
 .qna { width: 800px; margin: auto;}
-.qna-form { border: 3px solid gray; border-radius:10px; padding: 40px; margin-top:100px;}
+.qna-form { border: 3px solid gray; border-radius:10px; padding: 40px; margin-top:100px; margin-bottom: 100px;}
 .qna-data { text-align: center;}
 .title-qna { text-align: center; font-size: 40px; margin-bottom: 40px;}
 .qna-form-control { width: 600px;}
@@ -56,7 +56,7 @@ button.trigger { background: black; color: #fff; border: none;}
 </style>
 
 </head>
-<body class="home">
+<body>
 	<header> <!-- header 건들지 말긔! --> </header>
 
 
@@ -101,7 +101,7 @@ button.trigger { background: black; color: #fff; border: none;}
 
 
 
-	<footer>
+	<footer id="footer">
 		<!-- footer 건들지 말긔! -->
 	</footer>
 
