header, shop info 수정 중..

--- a/beautyChuSpring/src/main/webapp/view/common/header.html
+++ b/beautyChuSpring/src/main/webapp/view/common/header.html
@@ -1,7 +1,6 @@
 <!-- 공통 header -->
 <script type="text/javascript" src="../js/common.js"></script>
 
-
 <!-- login form css -->
 <link rel="stylesheet" type="text/css" href="../css/jy/jy_dialog.css" />
 <link rel="stylesheet" type="text/css" href="../css/jy/jy_dialog-ken.css" />
@@ -32,9 +31,8 @@
 							<li class="m2"><a href="#">강남/서초</a></li>
 							<li class="m3"><a href="#">압구정/청담</a></li>
 							<li class="m4"><a href="#">논현/신사</a></li>
-							<!-- <li class="m5"><a href="/svc/notice/web/kr/noticeList.do">공지사항</a></li>-->
-							<li class="m5"><a href="#" target="_blank" title="다른 지점보기">이대/신촌</a></li>
-							<li class="m6"><a href="#" title="갤러리아 면세점">홍대</a></li>
+							<li class="m5"><a href="#">이대/신촌</a></li>
+							<li class="m6"><a href="#">홍대</a></li>
 						</ul>
 					</div></li>
 				<!-- end of li.m1 -->
@@ -49,11 +47,8 @@
 							<li class="m5"><a href="kh-manCare.html">Man Care</a></li>
 							<li class="m6"><a href="kh-manEtc.html">Man ETC</a></li>
 						</ul>
-
-					</div> <!-- Fashion &amp; Style Content -->
-					<div class="good-list-container">
-						<h2 class="title">Fashion &amp; Style Content</h2>
-					</div> <!-- Fashion &amp; Style Content --></li>
+					</div> 
+				</li>
 
 				<!-- end of li.m2 -->
 
