Revert "header, shop info 수정 중.."
This reverts commit 82480abc910bcb0e3ba8928984e7ab1193c88657.

--- a/beautyChuSpring/src/main/webapp/view/kh-shopinfo.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-shopinfo.html
@@ -477,6 +477,14 @@ kh-shopListName {
 			<!-- header 건들지 말긔! -->
 		</header>
 
+
+		<!--	<div id=changediv >
+			<div id=div1>1 <button class='yun-pricelist' type="button">price list</button>
+			</div>
+
+		</div> -->
+
+
 		<div id="wrap-chu" class="wrap-chu">
 			<DIV
 				style="text-align: center; font-size: 50px; height: 90px; border-bottom: 2px black solid; padding: 20px; margin-bottom: 27px; width: 1160px; color: black;">SHOP</DIV>
@@ -497,17 +505,23 @@ kh-shopListName {
 					<div class="kh-gradation"></div>
 			</div> -->
 
+
+
+
 			</div>
 		</div>
 
 
 
-		<footer id="footer">
+		<footer>
 			<!-- footer 건들지 말긔! -->
 		</footer>
+		<!-- 
+	<script type="text/javascript"
+		src='../js/resources/jquery-2.1.1.min.js'></script>
+	<script src="../js/resources/starrr.js"></script> -->
 
-
-	<script type="text/javascript">
+		<script type="text/javascript">
 	<!-- header, footer 로드 스크립트!! -->
 		$('header').load('common/header.html'); 
 		$('footer').load('common/footer.html');
