--- a/beautyChuSpring/src/main/webapp/view/main.html
+++ b/beautyChuSpring/src/main/webapp/view/main.html
@@ -752,7 +752,7 @@ footer {
 									</span>
 									<span class="txt_price"><em>Fabien.H</em></span>
 									<span class="txt_ti txt_overflow_dot">서울시 강남구 삼성로 725</span>
-									<span class="txt_brand">02-333-5555</span>
+									<span class="txt_brand">02-469-9429</span>
 								</a>
 								<a onclick="javascript:confirmLogin();" class="btn_wish">WISH</a>
 								<a onclick="javascript:getGoodsInfo('17322','0');" class="btn_preview">미리보기</a>
@@ -765,7 +765,7 @@ footer {
 										<img src="../images/shop/shopinner.jpg" alt="" onmouseover="this.src=&quot;../images/shop/shop8.jpg&quot;" onmouseout="this.src=&quot;../images/shop/shopinner7.jpg&quot;">
 									</span>
 									<span class="proicon"> </span>
-									<span class="txt_price"><em>박승철헤어스투디오</em></span>
+									<span class="txt_price"><em>박승철헤어스튜디오</em></span>
 									<span class="txt_ti txt_overflow_dot">서울특별시 강남구 도곡동 953-1</span>
 									<span class="txt_brand">02-579-3920</span>
 								</a>
@@ -901,7 +901,7 @@ footer {
 				});  
 		    });
 	 });
-	/* end of main celebrity list */	
+	 /* end of main celebrity list */
 	</script>
 	
 	
