--- a/beautyChuSpring/src/main/webapp/view/common/footer.html
+++ b/beautyChuSpring/src/main/webapp/view/common/footer.html
@@ -6,7 +6,7 @@
             <div class="inner">
               <h2>ABOUT</h2>
               <ul>
-                <li class="m1"><a href="jy_qna.html">Q &amp; A</a></li>
+                <li class="m1"><a href="../jy_qna.html">Q &amp; A</a></li>
                 <li class="m2"><a href="http://192.168.0.13:8080/beautyChuSpring_K/view/admin/coupon.html">Admin</a></li>
                 <li class="m3"><a href="#">Mobile version</a></li>
               </ul>
@@ -36,7 +36,7 @@
             <!-- company-info -->
             <div class="company-info">
               <p class="info">
-                <span class="address">서울시 서초구 서초동 비트 ㅋㅋ</span>
+                <span class="address">서울시 서초구 서초동</span>
                 <span class="registcode">사업자등록번호 : 123123123123</span>
                 <span class="tel">전화 : 02-410-7114</span>
               </p>
